--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@hookform/resolvers": "^4.1.0",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -20,8 +21,10 @@
     "@radix-ui/react-switch": "^1.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "framer-motion": "^12.4.10",
     "lucide-react": "^0.475.0",
+    "motion": "^12.9.4",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "radix-ui": "^1.1.3",
